PR binutils/3110 * objcopy.c (copy_archive): Add new parameter: force_output_target. If not   true, then perserve the file formats of each copied archive element,   otherwise force them to be one specific file format.   (copy_file): Compute force_output_target parameter to pass to copy_archive.